# NF-e-Validator-MVP

./: .env.example  .gitignore  Aplicacao.md  CLEANUP_SUMMARY.md  LICENSE  README.md  RELATORIO_ASSERTIVIDADE.md  RELATORIO_TECNICO_EXPERT.txt  SUGESTOES_BASE_VALIDACAO.md  app.py  base_validacao.csv  generate_report.py  modern_chat.py  populate_legal_references.py  pyproject.toml  pytest.ini  relatorio.html  requirements.txt  rules.db  run_streamlit.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  quality.yml  test.yml
docs/: BUGFIX_SUMMARY.md  DELIVERY_SUMMARY.md  GEMINI_SETUP.md  INSTALL.md  QUICK_REFERENCE.md  README_CSVEDA.md  TEST_INSTRUCTIONS.md
scripts/: populate_db.py  populate_legal_refs_full.py
src/: __init__.py
src/agents/: __init__.py  eda_agent.py  ncm_agent.py
src/application/interfaces/: __init__.py  dataset_repository.py  file_processor.py
src/application/use_cases/: __init__.py  load_dataset_use_case.py
src/config/: __init__.py  settings.py
src/data_processing/: __init__.py  csv_pipeline.py  excel_generator.py
src/database/: __init__.py  rules.db  schema.sql
src/domain/: __init__.py  entities.py  services.py
src/infrastructure/adapters/: __init__.py  memory_dataset_repository.py  pandas_file_processor.py
src/infrastructure/di/: __init__.py  configuration.py  container.py  decorators.py  providers.py
src/interface/: __init__.py  streamlit_app.py
src/interfaces/: __init__.py  agent_interface.py  llm_interface.py
src/nfe_validator/: __init__.py
src/nfe_validator/domain/: __init__.py
src/nfe_validator/domain/entities/: __init__.py  nfe_entity.py
src/nfe_validator/domain/services/: __init__.py  federal_validators.py  state_validators.py
src/nfe_validator/infrastructure/: __init__.py
src/nfe_validator/infrastructure/parsers/: __init__.py  column_mapper.py  csv_parser.py
src/nfe_validator/infrastructure/validators/: __init__.py  report_generator.py
src/repositories/: __init__.py  fiscal_repository.py  local_csv_repository.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  chart_generator.py
tests/: __init__.py  conftest.py  test_agent.py  test_domain_services.py  test_integration.py
tests/output/: test_01_valid_report.md  test_02_ncm_error_report.md  test_03_pis_cofins_error_report.md  test_04_cfop_error_report.md  test_05_totals_error_report.md
